Add hobbies and age to search profile form (#23)
